[[release-notes-5.13.1]]
== 5.13.1

*Date of Release:* ❓

*Scope:* ❓

For a complete list of all _closed_ issues and pull requests for this release, consult the
link:{junit5-repo}+/milestone/97?closed=1+[5.13.1] milestone page in the JUnit repository
on GitHub.


[[release-notes-5.13.1-junit-platform]]
=== JUnit Platform

[[release-notes-5.13.1-junit-platform-bug-fixes]]
==== Bug Fixes

* ❓

[[release-notes-5.13.1-junit-platform-deprecations-and-breaking-changes]]
==== Deprecations and Breaking Changes

* ❓

[[release-notes-5.13.1-junit-platform-new-features-and-improvements]]
==== New Features and Improvements

* ❓


[[release-notes-5.13.1-junit-jupiter]]
=== JUnit Jupiter

[[release-notes-5.13.1-junit-jupiter-bug-fixes]]
==== Bug Fixes

* The 5.13.0 release introduced a regression regarding the execution order in test classes
  containing both test methods and `@Nested` test classes. When classpath scanning was
  used during test discovery -- for example, when resolving a package selector for a
  `@Suite` class -- test methods in `@Nested` classes were executed _before_ test methods
  in their enclosing class. This undesired change in behavior has now been reverted so
  that tests in `@Nested` test classes are always executed _after_ tests in enclosing test
  classes again.

[[release-notes-5.13.1-junit-jupiter-deprecations-and-breaking-changes]]
==== Deprecations and Breaking Changes

* ❓

[[release-notes-5.13.1-junit-jupiter-new-features-and-improvements]]
==== New Features and Improvements

* ❓


[[release-notes-5.13.1-junit-vintage]]
=== JUnit Vintage

[[release-notes-5.13.1-junit-vintage-bug-fixes]]
==== Bug Fixes

* ❓

[[release-notes-5.13.1-junit-vintage-deprecations-and-breaking-changes]]
==== Deprecations and Breaking Changes

* ❓

[[release-notes-5.13.1-junit-vintage-new-features-and-improvements]]
==== New Features and Improvements

* ❓